Important rework of models simulations fetch (Close #186)
